.helm/leet-code-vue/templates/leet-code-vue-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leet-code-vue-deployment
  labels:
    app: leet-code-vue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: leet-code-vue
  template:
    metadata:
      labels:
        app: leet-code-vue
    spec:
      containers:
      - name: leetcode-vue-container
        image: markus777/leet-code-vue:0.0.1
        ports:
          - containerPort: 5000
