.helm/leet-code-vue/templates/leet-code-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: leet-code-backend-service
spec:
  selector:
    app: 'leet-code-back'
  ports:
  - name: leet-code-backend 
    port: 3000
    targetPort: 3000
