.helm/leet-code-vue/templates/leet-code-vue-service.yml
apiVersion: v1
kind: Service
metadata:
  name: leet-code-vue-service
spec:
  selector:
    app: 'leet-code-vue'
  ports:
  - name: leet-code-vue
    port: 5000
    targetPort: 5000
